--- a/styles/page-specific.css
+++ b/styles/page-specific.css
@@ -59,7 +59,7 @@ carousel {
   background-repeat: no-repeat;
 }
 .main-carousel .carousel-title {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'IBM Plex Sans Medium', sans-serif;
   font-size: 34px;
   margin: 0;
 }
