--- a/styles/components.css
+++ b/styles/components.css
@@ -60,7 +60,7 @@
 /*IBM Plex Sans Bold*/
   /* latin-ext */
   @font-face {
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans Bold';
     font-style: normal;
     font-weight: 700;
     src: url(https://fonts.gstatic.com/s/ibmplexsans/v3/zYX9KVElMYYaJe8bpLHnCwDKjWr7AI9sdO_q.woff2) format('woff2');
@@ -68,10 +68,10 @@
   }
   /* latin */
   @font-face {
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans Bold';
     font-style: normal;
     font-weight: 700;
-    src: url(https://fonts.gstatic.com/s/ibmplexsans/v3/zYX9KVElMYYaJe8bpLHnCwDKjWr7AIFsdA.woff2) format('woff2');
+    src: url(../src/fonts/IBM_Plex_Sans_Bold.woff) format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 /**/
