--- a/styles/legacy_components.css
+++ b/styles/legacy_components.css
@@ -2,3 +2,46 @@ container {
   width: var(--content-max-width);
   padding: 0 var(--content-padding-x);
 }
+banner {
+  display: flex;
+  height: auto;
+  background-color: var(--banner-background-color);
+  justify-content: center;
+  padding: var(--banner-padding-y) 0;
+}
+banner.extra-padding-y {
+  padding: var(--banner-padding-y-increased) var(--banner-padding-x);
+}
+banner h3-8, banner subtitle, banner p {
+  display: block;
+  max-width: inherit;
+  color: var(--banner-text-color);
+  padding: var(--banner-elements-padding-between) var(--banner-padding-x);
+}
+banner.red {
+  background-color: var(--background-red);
+}
+banner.white, banner.white subtitle, banner.white p {
+  background-color: var(--background-white);
+  color: var(--banner-text-color-white) !important;
+}
+banner.white h3-8 {
+  color: var(--banner-text-color-light) !important;
+}
+banner h3-8 {
+  font-family: var(--heading-font-family);
+  font-size: var(--h3-8-font-size);
+}
+banner subtitle {
+  font-family: var(--text-font-family);
+  font-size: var(--subtitle-1-font-size);
+  letter-spacing: var(--subtitle-1-sp);
+}
+banner p {
+  font-family: var(--text-font-family);
+  font-size: var(--body-1-font-size);
+  letter-spacing: var(--body-1-sp);
+}
+banner p + buttonrow, subtitle p + buttonrow {
+  padding-top: 30px;
+}
