use default cursor on non-link topnav dropdowns

--- a/styles/troop370-topnav.css
+++ b/styles/troop370-topnav.css
@@ -92,6 +92,9 @@ topnav li.dropdown {
 .dropdown-content a:hover {
   background-color: #f1f1f1
 }
+.dropdown > a {
+  cursor: default;
+}
 .dropdown:hover .dropdown-content {
   display: block;
 }
