no scrollbar on carousel dots

--- a/styles/page-specific.css
+++ b/styles/page-specific.css
@@ -20,7 +20,7 @@ carousel {
 }
 .flickity-page-dots {
   bottom: 15px !important;
-  overflow: auto;
+  overflow: hidden;
   height: 14px;
 }
 .flickity-page-dots .dot {
