add MLK campout, woodruff, and summit

--- a/styles/page-specific.css
+++ b/styles/page-specific.css
@@ -96,16 +96,16 @@ carousel {
   background-image: url("../src/banner images/scout shadow on top of mountain with sunset.jpg");
 }
 #card2 {
-  background-image: url("../src/banner images/siler bald view.jpg")
+  background-image: url("../src/banner images/florida-mtb.jpg")
 }
 #card3 {
   background-image: url("../src/banner images/ookpik - skiing in a flat feild.jpg")
 }
 #card4 {
-  background-image: url("../src/banner images/bert adams lake.jpg")
+  background-image: url("../src/banner images/wsr-sign-far.jpg")
 }
 #card5 {
-  background-image: url("../src/banner images/pineneedles_l.jpg")
+  background-image: url("../src/banner images/summit-sign.webp")
 }
 #imgcard1 {
   background-image: url("../src/photos-index-slideshow/1.jpg");
