add merit badge clinic

--- a/styles/page-specific.css
+++ b/styles/page-specific.css
@@ -107,6 +107,9 @@ carousel {
 #card5 {
   background-image: url("../src/banner images/summit-sign.webp")
 }
+#card6 {
+  background-image: url("../src/banner images/merit-badges.jpg")
+}
 #imgcard1 {
   background-image: url("../src/photos-index-slideshow/1.jpg");
 }
