change "Boy Scout" to "BSA" in titlebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,7 +112,7 @@ layout: default
     					<path d='M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z' />
     				</svg>
     			</a>
-    			<heading class='mobile-appbar-title'>Boy Scout Troop 370</heading>
+    			<heading class='mobile-appbar-title'>BSA Troop 370</heading>
     		</div>
     	</titlebar>
 
