--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -100,7 +100,7 @@
 
     	<titlebar id='titlebar1'>
     		<div class='container'>
-    			<heading>Boy Scout Troop 370</heading>
+    			<heading>BSA Troop 370</heading>
     		</div>
     	</titlebar>
 
