--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,7 +106,7 @@ layout: default
 
     	<titlebar id='titlebar2' style='position:sticky;top:0px;z-index:100;transition:box-shadow 0.25s;'>
     		<div class='container' style='width:100%;'>
-    			<a href='#' data-activates='slide-out' class='button-collapse'>
+    			<a href='#' data-activates='slide-out' class='button-collapse' style="line-height: 0;color: transparent;">Menu
     				<svg xmlns='http://www.w3.org/2000/svg' class='menu-icon2' width='24' height='24' viewBox='0 0 24 24'>
     					<path d='M0 0h24v24H0z' fill='none' />
     					<path d='M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z' />
