--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,18 +23,18 @@
           <img src="src/icons/troop370bugler_inverted.png" style="height: 160px;display: block;line-height: 48px;position: absolute;padding: 20px;">
           <p style="font-family: 'IBM Plex Sans Medium', sans-serif;font-size: 20px;line-height: 24px;color: white;padding: 18px 16px;margin-left: 80px;">BSA Troop 370</p>
           <p style="font-family: 'IBM Plex Sans Medium', sans-serif;font-size: 16px;line-height: 24px;color: white;padding: 0px 16px;margin-left: 80px;margin-top:-20px">Atlanta, GA</p>
-          <a href="https://www.facebook.com/groups/126169727423188/" class="mdc-button standard-light-button mdc-button--outlined" style="height:50px;min-width:50px;max-width:50px;border-radius:50px;padding:0;border:none;margin:0px -4px 0 84px;">
-            <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:32px;width:32px;margin:0px!important;">
+          <a href="https://www.facebook.com/groups/126169727423188/" class="mdc-button standard-light-button mdc-button--outlined" style="height:50px;min-width:50px;max-width:50px;border-radius:50px;padding:0;border:none;margin:0px -4px 0 84px;display:inline-block;">
+            <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:32px;width:32px;margin:9px!important;">
             <path d="M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M18,5H15.5A3.5,3.5 0 0,0 12,8.5V11H10V14H12V21H15V14H18V11H15V9A1,1 0 0,1 16,8H18V5Z" />
             </svg>
           </a>
-          <a href="https://www.instagram.com/bsatroop370/" class="mdc-button standard-light-button mdc-button--outlined" style="height:50px;min-width:50px;max-width:50px;border-radius:50px;padding:0;border:none;margin-top:0px;">
-            <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:32px;width:32px;margin:0px!important;">
+          <a href="https://www.instagram.com/bsatroop370/" class="mdc-button standard-light-button mdc-button--outlined" style="height:50px;min-width:50px;max-width:50px;border-radius:50px;padding:0;border:none;margin-top:0px;display:inline-block;">
+            <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:32px;width:32px;margin:9px!important;">
             <path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z">
             </svg>
           </a>
-          <a href="https://venmo.com/troop-threeseventy" class="mdc-button standard-light-button mdc-button--outlined" style="height:50px;min-width:50px;max-width:50px;border-radius:50px;padding:0;border:none;margin-top:0px;">
-            <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:32px;width:32px;margin:0px!important;">
+          <a href="https://venmo.com/troop-threeseventy" class="mdc-button standard-light-button mdc-button--outlined" style="height:50px;min-width:50px;max-width:50px;border-radius:50px;padding:0;border:none;margin-top:0px;display:inline-block;">
+            <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:32px;width:32px;margin:9px!important;">
             <path d="M19,19H5V5H19M19,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M13.96,12.29L11.21,15.83L9.25,13.47L6.5,17H17.5L13.96,12.29Z" />
             </svg>
           </a>
