fix bugler width

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@
     <div class='top'>
     	<ul id='slide-out' class='side-nav'>
         <div style="height: 120px;background-color: #003f87;">
-          <img src="src/icons/troop370bugler_inverted.png" style="height: 160px;display: block;line-height: 48px;position: absolute;padding: 20px;">
+          <img src="src/icons/troop370bugler_inverted.png" style="height: 160px;width:100px;display: block;line-height: 48px;position: absolute;padding: 20px;">
           <p style="font-family: 'IBM Plex Sans Medium', sans-serif;font-size: 20px;line-height: 24px;color: white;padding: 18px 16px;margin-left: 80px;">BSA Troop 370</p>
           <p style="font-family: 'IBM Plex Sans Medium', sans-serif;font-size: 16px;line-height: 24px;color: white;padding: 0px 16px;margin-left: 80px;margin-top:-20px">Atlanta, GA</p>
           <a href="https://www.facebook.com/groups/126169727423188/" class="mdc-button standard-light-button mdc-button--outlined" style="height:50px;min-width:50px;max-width:50px;border-radius:50px;padding:0;border:none;margin:0px -4px 0 84px;display:inline-block;">
