replace weekly newsletters with communication

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,7 +97,7 @@ layout: default
     				<li> <a class='collapsible-header waves-effect'>Members</a>
     					<div class='collapsible-body'>
     						<ul>
-    							<li><a class='waves-effect' href='email-newsletters_encrypted.html'>Weekly Newsletters</a></li>
+    							<li><a class='waves-effect' href='communication_encrypted.html'>Communication</a></li>
     							<li><a class='waves-effect' href='calendar_encrypted.html'>Calendar</a></li>
     							<li><a class='waves-effect' href='mb-counselors_encrypted.html'>Merit Badge Counselors</a></li>
     							<li><a class='waves-effect' href='troop-roster_encrypted.html'>Troop Roster</a></li>
@@ -171,7 +171,7 @@ layout: default
     				</li>
     				<li class='dropdown'><a href='javascript:void(0)'>Members</a>
     					<dropdown class='dropdown-content'>
-                <a href='email-newsletters_encrypted.html'>Weekly Newsletters</a>
+                <a href='communication_encrypted.html'>Communication</a>
                 <a href='calendar_encrypted.html'>Calendar</a>
                 <a href='mb-counselors_encrypted.html'>Merit Badge Counselors</a>
                 <a href='troop-roster_encrypted.html'>Troop Roster</a>
@@ -195,7 +195,7 @@ layout: default
                 <a href='payments.html' id='drop-payments'>Payments</a>
                 <a href='http://store.troop370atlanta.org' target='blank' id='drop-pinestraw'>Troop Store</a>
     						<dropdown class='dropdown-content' id='drop-members'>
-                  <a href='email-newsletters_encrypted.html'>Weekly Newsletters</a>
+                  <a href='communication_encrypted.html'>Communication</a>
                   <a href='calendar_encrypted.html'>Calendar</a>
                   <a href='mb-counselors_encrypted.html'>Merit Badge Counselors</a>
                   <a href='troop-roster_encrypted.html'>Troop Roster</a>
