combine topnav and titlebar

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -119,11 +119,6 @@
   	</ul>
 
     <div class='top'>
-    	<titlebar id='titlebar1'>
-    		<div class='container'>
-    			<heading>BSA Troop 370</heading>
-    		</div>
-    	</titlebar>
 
     	<titlebar id='titlebar2' style='position:sticky;top:0px;z-index:100;transition:box-shadow 0.25s;'>
     		<div class='container' style='width:100%;'>
@@ -139,6 +134,9 @@
 
     	<topnav>
     		<div class='container'>
+          <titlebar id='titlebar1'>
+        		<a href='index.html'><heading>BSA Troop 370</heading></a>
+        	</titlebar>
     			<ul id='main-nav'>
     				<li><a href='index.html' id='home'>Home</a></li>
     				<li class='dropdown'><a href='javascript:void(0)'>About</a>
