--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,7 @@
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="stylesheet" href="styles/bundle.css">
     <script src="scripts/bundle.js" async></script>
+    <link rel="stylesheet" href="styles/troop370-topnav-v2.css">
   </head>
 
   <body>
@@ -120,8 +121,8 @@
 
     <div class='top'>
 
-    	<titlebar id='titlebar2' style='position:sticky;top:0px;z-index:100;transition:box-shadow 0.25s;'>
-    		<div class='container' style='width:100%;'>
+    	<titlebar id='titlebar2'>
+    		<div class='container'>
     			<a href='#' data-activates='slide-out' class='button-collapse' style="line-height: 0;color: transparent;">Menu
     				<svg xmlns='http://www.w3.org/2000/svg' class='menu-icon2' width='24' height='24' viewBox='0 0 24 24'>
     					<path d='M0 0h24v24H0z' fill='none' />
