--- a/styles/components.css
+++ b/styles/components.css
@@ -2,7 +2,7 @@
 /*roboto 400, 400i, 500, 500i*/
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i');
 
-@import "../resources/materialize/0.97.8/css/materialize.css";
+/*@import "../resources/materialize/0.97.8/css/materialize.css";*/
 
 @import "../styles/legacy_components.css";
 
@@ -75,6 +75,15 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 /**/
+html {
+    line-height: 1.5;
+    font-family: "Roboto", sans-serif;
+    font-weight: normal;
+    color: rgba(0, 0, 0, 0.87);
+}
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
+}
 * {
   box-sizing: border-box;
 }
