Troop Store --> Pine Straw

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,7 +111,7 @@
   		<li><a class='waves-effect' href='photos.html'>Photos</a></li>
   		<li><a class='waves-effect' href='contact.html'>Contact</a></li>
   		<li><a class='waves-effect' href='payments.html'>Payments</a></li>
-  		<li><a class='waves-effect' href='http://store.troop370atlanta.org' target='blank'>Troop Store</a></li>
+  		<li><a class='waves-effect' href='http://store.troop370atlanta.org' target='blank'>Pine Straw</a></li>
   		<li>
   			<div class='divider'></div>
   		</li>
@@ -181,7 +181,7 @@
     				<li><a href='photos.html' id='photos'>Photos</a></li>
     				<li><a href='contact.html' id='contact'>Contact</a></li>
     				<li><a href='payments.html' id='payments'>Payments</a></li>
-    				<li><a href='http://store.troop370atlanta.org' target='blank' id='pinestraw'>Troop Store</a></li>
+    				<li><a href='http://store.troop370atlanta.org' target='blank' id='pinestraw'>Pine Straw</a></li>
     				<li class='dropdown' style='box-shadow: none;'>
     					<a href='javascript:void(0)' id='dropdownarrow'>
     						<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'>
@@ -193,7 +193,7 @@
                 <a href='photos.html' id='drop-photos'>Photos</a>
                 <a href='contact.html' id='drop-contact'>Contact</a>
                 <a href='payments.html' id='drop-payments'>Payments</a>
-                <a href='http://store.troop370atlanta.org' target='blank' id='drop-pinestraw'>Troop Store</a>
+                <a href='http://store.troop370atlanta.org' target='blank' id='drop-pinestraw'>Pine Straw</a>
     						<dropdown class='dropdown-content' id='drop-members'>
                   <a href='email-newsletters_encrypted.html'>Weekly Newsletters</a>
                   <a href='calendar_encrypted.html'>Calendar</a>
