--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@ layout: default
     <link rel='stylesheet' href='styles/page-specific.css'>
     <link rel="stylesheet" href="styles/bundle.css">
     <script src="scripts/bundle.js" async></script>
+    <link rel="stylesheet" href="resources/materialize/0.97.8/css/materialize-sidenav.css"
   </head>
 
   <body>
